tests/NormalTests/paczka1/fuzzy1/37572800.err
Error in line 21: GOIe4QZMo S913 4,6
Error in line 15: uDh S913 166,8
Error in line 28: GOIe4QZMo S58 3,5
Error in line 30: NTw8f5ju9M A207 87,2
